[~] fix start script